# log_analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yaml
data/: config.json.sample
log_analyzer/: log_analyzer.py
log_analyzer/report/: __init__.py  config.py  fs.py  logger.py  report.py
optional_tasks/: deco.py  poker.py
tests/: test_config.py  test_report.py
